docs: mark Milestone 4 complete and move to Milestone 5 (Structured Concurrency)