@@ -1,87 +1,94 @@
-# Current Feature: Milestone 4 — Virtual Threads
+# Current Feature: Milestone 5 — Reservation Creation with Structured Concurrency
 
 *Last updated: 2026-09-21*
 
 ## Overview
 
-Apply `@RunOnVirtualThread` to blocking persistence operations, verifying that JDBC calls are
-dispatched onto virtual threads instead of platform threads. This unlocks the core advantage of
-Java 21 virtual threads: high concurrent load without manual thread-pool tuning.
+Build a REST endpoint for reservation creation that uses Java 21 structured concurrency (`StructuredTaskScope`)
+to fan out parallel sub-checks (inventory availability, pricing, fraud/rate-limit detection) that succeed or fail
+together with proper cancellation propagation. This demonstrates the power of virtual threads + structured concurrency
+for high-load request handling.
 
 ## Specification
 
 ### Requirements
-- [ ] Apply `@RunOnVirtualThread` annotation to repository query/persist methods or service layer
-- [ ] Verify JDBC calls execute on virtual threads (via logging/tracing)
-- [ ] Confirm dev mode works: `mvn quarkus:dev` without blocking issues
-- [ ] Short load test: demonstrate throughput improvement vs platform threads (optional)
-- [ ] Document virtual thread configuration and behavior in README
+- [ ] REST endpoint: `POST /reservations` that creates a new reservation
+- [ ] Parallel checks using `StructuredTaskScope`:
+  - Inventory availability check (blocking JDBC via InventoryService)
+  - Pricing/discount calculation (simulated logic)
+  - Fraud/rate-limit check (simulated external call)
+- [ ] Atomicity: all checks succeed or entire request fails (no partial states)
+- [ ] Cancellation propagation: if one check fails, others are cancelled
+- [ ] Request validation: tenant ID, inventory item ID, quantity validation
+- [ ] Response: `Confirmed` reservation or error with clear failure reason
 
 ### Acceptance Criteria
-- [ ] `mvn clean verify` passes
-- [ ] All integration tests pass with virtual thread dispatcher
-- [ ] No deadlocks or thread starvation observed
-- [ ] Load test (if run) shows improved throughput or same throughput with lower footprint
+- [ ] `mvn clean verify` passes with new REST tests
+- [ ] Structured concurrency properly handles task cancellation
+- [ ] All 3 sub-checks run in parallel (verified via timing/logs)
+- [ ] No deadlocks or resource leaks
+- [ ] Request/response properly serialized to JSON
+- [ ] Error responses include meaningful failure reasons
 
 ## Implementation Plan
 
-1. **Understand virtual thread integration**
-   - Quarkus automatically dispatches blocking Panache/JDBC onto virtual threads when enabled
-   - `@RunOnVirtualThread` can be applied at REST endpoint or service layer
-   - No code changes to repositories needed (just verification/documentation)
+1. **Create ReservationResource REST controller**
+   - `@Path("/reservations")` endpoint
+   - `@POST` method accepting tenant ID, inventory item ID, quantity
+   - Inject ReservationService, InventoryService, and create parallel check services
 
-2. **Enable and verify virtual thread dispatch**
-   - Check Quarkus config for virtual thread dispatcher (may be default in 3.8.6)
-   - Run integration tests and confirm no blocking issues
-   - Optional: add logging to show virtual thread IDs in test output
+2. **Implement parallel checks with StructuredTaskScope**
+   - `InventoryCheckTask` — verify availability using InventoryService.findAndReserve()
+   - `PricingCheckTask` — calculate pricing (simulated logic)
+   - `FraudCheckTask` — fraud/rate-limit check (simulated external call)
+   - Use `StructuredTaskScope.ShutdownOnSuccess` to fail fast if any check fails
 
-3. **Document the pattern**
-   - Explain why: blocking I/O on virtual threads is efficient, not wasteful
-   - Contrast with reactive persistence (more complex, not needed here)
-   - Mention preview API usage if structured concurrency is added later
+3. **Handle results and create reservation**
+   - Combine check results
+   - Create new Pending reservation via ReservationService
+   - Return Confirmed response or error
 
-4. **Performance observation** (optional)
-   - Run a load test: create/read reservations under concurrent load
-   - Measure: throughput, latency, thread count
-   - Document comparison if done
+4. **Add integration tests**
+   - Success path: valid reservation with all checks passing
+   - Failure paths: inventory unavailable, pricing check fails, fraud check fails
+   - Verify parallel execution (timing test)
+   - Verify cancellation propagation (one failing task cancels others)
+
+5. **Document structured concurrency pattern**
+   - Explain why: fan-out parallelism with guaranteed cancellation
+   - Contrast with ExecutorService (manual cancellation, no guarantees)
+   - Show how virtual threads make this efficient (cheap threads, no thread starvation)
 
 ## Testing Strategy
 
-- Unit tests: no changes (domain model unchanged)
-- Integration tests: run existing @QuarkusTest tests, confirm no blocking
-- Load test (optional): concurrent reservation creation/read, measure latency
-- Dev mode: `mvn quarkus:dev`, interact with services, confirm no hangs
+- Integration tests: `@QuarkusTest` with REST endpoints
+  - Happy path: valid reservation → Confirmed
+  - Failure paths: each check type fails independently
+  - Timing test: verify parallel execution (3x faster than sequential)
+  - Cancellation test: verify one failure cancels all tasks
+- Load test (optional): concurrent reservation requests under `StructuredTaskScope`
 
 ## Files to Create/Modify
 
-**Per-service (if adding @RunOnVirtualThread):**
-- REST endpoints or service layer (to be created in Milestone 5)
-- application.yml (verify/document virtual thread config)
+**Per-service:**
+- `reservation-service/src/main/java/dev/noe/loomcrete/reservation/ReservationResource.java` (REST)
+- `inventory-service/src/main/java/dev/noe/loomcrete/inventory/InventoryService.java` (enhance to support checks)
+- `tenant-service/src/main/java/dev/noe/loomcrete/tenant/TenantService.java` (if needed for validation)
+
+**Tests:**
+- `reservation-service/src/test/java/dev/noe/loomcrete/reservation/ReservationResourceTest.java`
 
 **Documentation:**
-- README: add section explaining virtual thread usage and why it matters
+- README: add section on structured concurrency and reservation creation flow
 
 ## Status
 
-- [x] Spec approved
-- [x] Build started
-- [ ] Tests passing (running...)
+- [ ] Spec approved
+- [ ] Build started
+- [ ] Tests passing
 - [ ] Feature complete
 - [ ] Code review passed
 - [ ] Ready to merge
-
-## Progress
-
-**Step 1 (Complete):**
-- Verified Quarkus 3.8.6 uses virtual threads by default for blocking JDBC
-- Added "Virtual Threads & Blocking JDBC" section to README
-
-**Step 2 (In Progress):**
-- Created ReservationService with methods using blocking repository calls
-- Created TenantService with similar pattern
-- Created InventoryService with similar pattern
-- Added thread logging to verify virtual thread execution (DEBUG level)
-- All methods rely on Quarkus automatic dispatch to virtual threads (no explicit annotation needed)
 
 ## Blockers
 
@@ -89,7 +96,7 @@ None yet.
 
 ## Notes
 
-- Virtual threads are stable in Java 21 LTS; no preview flag needed for basic usage
-- Structured concurrency (`StructuredTaskScope`) is still preview (milestone 5+)
-- Quarkus 3.8.6 handles virtual thread integration transparently for blocking I/O
-- No code changes to repositories; just verification and documentation
+- `StructuredTaskScope` is a preview API; requires `--enable-preview`
+- `StructuredTaskScope.ShutdownOnSuccess` cancels remaining tasks if one succeeds/fails
+- Virtual threads make structured concurrency lightweight and efficient
+- This is the first "business logic" milestone; previous ones were infrastructure
